crates/ui/src/snapshots/ui__widgets__snapshot_tests__decision_view_call_snapshot.snap
---
source: crates/ui/src/widgets.rs
expression: v
---
{
  "action": "call",
  "amount": 0,
  "ev": 0.42,
  "pot_odds": 0.238,
  "equity": 0.412,
  "break_even": 0.238,
  "opponent": "lag",
  "confidence": 0.82
}
