crates/ui/src/snapshots/ui__widgets__snapshot_tests__decision_view_raise_snapshot.snap
---
source: crates/ui/src/widgets.rs
expression: v
---
{
  "action": "raise",
  "amount": 750,
  "ev": 1.23,
  "pot_odds": 0.238,
  "equity": 0.55,
  "break_even": 0.238,
  "opponent": "lag",
  "confidence": 0.82
}
